Contrast issues

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -76,7 +76,7 @@ p.colored {
 }
   
 .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/tuxtla.jpeg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url("../images/tuxtla.jpeg");
     height: 50%;
     background-position: center;
     background-repeat: no-repeat;
